<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="wid_mo_ta">Hôm nay Habis</string>
    <string name="wid_cam">Habis Cam</string>
    <string name="wid_dem">Habis Đêm</string>
    <string name="wid_lich">Habis Lịch</string>
    <string name="xong">Xong</string>
    <string name="het_viec">Hết việc hôm nay</string>
    <string name="con_viec">Còn việc trong app</string>
    <string name="het_focus">Hết focus</string>
    <string name="focus_nhan">FOCUS</string>
    <string name="viec_nhan">VIỆC</string>
</resources>
